fix(task): use proper getFirst instead of get(0)